src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Preferred_Way_of_Ingredient_Ordering__c</fullName>
        <label>Preferred Way of Ingredient Ordering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Support</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Routesales</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>Indirect Channel</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Management_by_Tenderdesk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process Management by Tenderdesk</description>
        <label>Process Management by Tenderdesk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI-analyse voltooid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Taste</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other Reason</label>
                </value>
                <value>
                    <fullName>No Feedback (yet)</fullName>
                </value>
                <value>
                    <fullName>Invalid Bid</fullName>
                    <isActive>false</isActive>
                    <label>Invalid Bid</label>
                </value>
                <value>
                    <fullName>Not Fit to Partner</fullName>
                    <isActive>false</isActive>
                    <label>Not Fit to Partner</label>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                    <isActive>false</isActive>
                    <label>Relationship</label>
                </value>
                <value>
                    <fullName>Sales Process</fullName>
                    <isActive>false</isActive>
                    <label>Sales Process</label>
                </value>
                <value>
                    <fullName>Service</fullName>
                    <isActive>false</isActive>
                    <label>Service</label>
                </value>
                <value>
                    <fullName>Wrong Solution</fullName>
                    <isActive>false</isActive>
                    <label>Wrong Solution</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Lost_by_JDE__c</fullName>
        <description>Used in Win/Loss Analysis</description>
        <label>Reason Lost by JDE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Taste</fullName>
                </value>
                <value>
                    <fullName>Invalid Offer</fullName>
                </value>
                <value>
                    <fullName>No Bid - Tender Demands Unacceptable for JDE</fullName>
                </value>
                <value>
                    <fullName>No Bid - JDE cannot meet Tender Criteria</fullName>
                </value>
                <value>
                    <fullName>No Bid - Tender Unwinnable for JDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_No_Bid__c</fullName>
        <label>Reason No Bid</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Fit for JDE</fullName>
                </value>
                <value>
                    <fullName>Stopped by Customer</fullName>
                </value>
                <value>
                    <fullName>No Bid: JDE Cannot Fulfill Knock-out Criteria</fullName>
                </value>
                <value>
                    <fullName>No Bid: JDE Chance of Winning is Too Small</fullName>
                </value>
                <value>
                    <fullName>No Bid: RFP is Not Real (or Serious)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other Reason</label>
                </value>
                <value>
                    <fullName>Switched partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Won__c</fullName>
        <label>Reason Won</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Taste</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other Reason</label>
                </value>
                <value>
                    <fullName>No Feedback (yet)</fullName>
                    <isActive>false</isActive>
                    <label>No Feedback (yet)</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                    <isActive>false</isActive>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Service</fullName>
                    <isActive>false</isActive>
                    <label>Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Won_by_JDE__c</fullName>
        <description>Used in Win/Loss Analysis</description>
        <label>Reason Won by JDE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Taste</fullName>
                </value>
                <value>
                    <fullName>Other Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>IF( ISPICKVAL(Go_To_Market__c, &quot;Direct&quot;) , $Setup.JDE_Custom_Settings__c.Quote_RecordType_Id_Direct__c,  $Setup.JDE_Custom_Settings__c.Quote_RecordType_Id_Indirect__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Agreement1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement</label>
        <referenceTo>Apttus__APTS_Related_Agreement__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>OpportunitiesAgreements</relationshipLabel>
        <relationshipName>OpportunitiesAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Id__c</fullName>
        <label>Role Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Account Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Amount__c</fullName>
        <label>Services Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family_text__c</field>
            <operation>equals</operation>
            <value>SAP_05</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Spare_Parts_Amount__c</fullName>
        <label>Spare Parts Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family_text__c</field>
            <operation>equals</operation>
            <value>SAP_06</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Awarded_Preliminary__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;Awarded (preliminary)&apos;), (NOW() -  Stage_Time_Stamp_Awarded_Preliminary__c ), ( Stage_Time_Stamp_Awarded_Preliminary__c  -
Stage_Time_Stamp_Negotiation_Review__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Awarded (Preliminary)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Awarded__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;Awarded (preliminary)&apos;), (NOW() - Stage_Time_Stamp_Awarded__c), (Stage_Time_Stamp_Awarded__c -
 Stage_Time_Stamp_Negotiation_Review__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Awarded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Closed_Lost__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;Closed Lost&apos;), (NOW() - Stage_Time_Stamp_Closed__c), IF( RecordType.Name = &apos;Standard Opportunity&apos;, 
(Stage_Time_Stamp_Closed__c -Stage_Time_Stamp_Negotiation_Review__c), 
(Stage_Time_Stamp_Closed__c -Stage_Time_Stamp_Awarded__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Closed Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Closed_Won__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;Closed Won&apos;), (NOW() - Stage_Time_Stamp_Closed_Won__c), IF( RecordType.Name = &apos;Standard Opportunity&apos;, 
(Stage_Time_Stamp_Closed_Won__c -Stage_Time_Stamp_Negotiation_Review__c), 
(Stage_Time_Stamp_Closed_Won__c -
 Stage_Time_Stamp_Awarded__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Closed Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Converted_FromLead__c</fullName>
        <label>Stage Duration Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Dev_Prop_Presentation__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;Develop Proposition/Presentation&apos;), 
(NOW() - Stage_Time_Stamp_Dev_Prop_Presentation__c), 
(Stage_Time_Stamp_Quotation_Proposal_Sent__c -
 Stage_Time_Stamp_Dev_Prop_Presentation__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Dev. Prop/Presentation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Follow_Up_FromLead__c</fullName>
        <label>Stage Duration Follow-Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_In_Progress_FromLead__c</fullName>
        <label>Stage Duration In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_In_Progress__c</fullName>
        <description>For report purposes do not delete</description>
        <formula>IF( ISPICKVAL(StageName, &apos;Pre-tender&apos;), 
(NOW() - Stage_Time_Stamp_In_Progress__c), 
(Stage_Time_Stamp_Dev_Prop_Presentation__c - Stage_Time_Stamp_In_Progress__c))</formula>
        <label>Stage Duration Pre-tender</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Inventorizaton__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;Qualification/Inventarisation&apos;), 
(NOW() - Stage_Time_Stamp_Inventorization__c),
(Stage_Time_Stamp_Inventorization__c -
 Stage_Time_Stamp_Dev_Prop_Presentation__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Inventarisation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Negotiation_Review__c</fullName>
        <description>For report purposes do not delete</description>
        <formula>IF( ISPICKVAL(StageName, &apos;Negotiation/Review&apos;), 
 (NOW() - Stage_Time_Stamp_Negotiation_Review__c), 
 IF( RecordType.Name = &apos;Standard Opportunity&apos;, 
  IF(ISNULL(Stage_Time_Stamp_Closed_Won__c),
  (Stage_Time_Stamp_Closed__c -
 Stage_Time_Stamp_Negotiation_Review__c),
  (Stage_Time_Stamp_Closed_Won__c -
 Stage_Time_Stamp_Negotiation_Review__c)),
  (Stage_Time_Stamp_Awarded__c -
 Stage_Time_Stamp_Negotiation_Review__c)
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Negotiation/Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Nurture_FromLead__c</fullName>
        <label>Stage Duration Nurture</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Open__c</fullName>
        <description>For report purposes do not delete</description>
        <formula>IF( ISPICKVAL(StageName, &apos;Open&apos;), (NOW() - Stage_Time_Stamp_Open__c), IF( RecordType.Name = &apos;Standard Opportunity&apos;, 
(Stage_Time_Stamp_Inventorization__c - Stage_Time_Stamp_Open__c), 
(Stage_Time_Stamp_In_Progress__c - Stage_Time_Stamp_Open__c)))</formula>
        <label>Stage Duration Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Pending_Opportunity__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;Pending Opportunity&apos;), 
(NOW() -  Stage_Time_Stamp_Pending_Opportunity__c ), 
(Stage_Time_Stamp_Open__c - Stage_Time_Stamp_Pending_Opportunity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Pending Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Quotation_Proposal_Sent__c</fullName>
        <description>For report purposes do not delete</description>
        <formula>IF( ISPICKVAL(StageName, &apos;Quotation/Proposal Sent&apos;), (NOW() - Stage_Time_Stamp_Quotation_Proposal_Sent__c), IF( RecordType.Name = &apos;Standard Opportunity&apos;,
 (Stage_Time_Stamp_Negotiation_Review__c - Stage_Time_Stamp_Quotation_Proposal_Sent__c), 
(Stage_Time_Stamp_Tasting__c - Stage_Time_Stamp_Quotation_Proposal_Sent__c)))</formula>
        <label>Stage Duration Quotation/Proposal Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Stamp_Proposal_Agreement__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;Proposal / Agreement Sent&apos;), (NOW() - Stage_Time_Stamp_Proposal_Agreement_Sent__c), IF( RecordType.Name = &apos;Standard Opportunity&apos;,
 (Stage_Time_Stamp_Negotiation_Review__c - Stage_Time_Stamp_Proposal_Agreement_Sent__c), 
( Stage_Time_Stamp_Tasting_Trial__c - Stage_Time_Stamp_Proposal_Agreement_Sent__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Stamp Proposal/Agreement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Tasting_Trial__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;Tasting / Trial&apos;), 
(NOW() -  Stage_Time_Stamp_Tasting_Trial__c),
(Stage_Time_Stamp_Negotiation_Review__c - Stage_Time_Stamp_Tasting_Trial__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Tasting / Trial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Tasting__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;Tasting&apos;), 
(NOW() - Stage_Time_Stamp_Tasting__c),
(Stage_Time_Stamp_Negotiation_Review__c - Stage_Time_Stamp_Tasting__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration Tasting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Withdrawn__c</fullName>
        <formula>IF( ISPICKVAL(StageName, &apos;No Bid&apos;), 
(NOW() - Stage_Time_Stamp_Withdrawn__c), 
(Stage_Time_Stamp_Withdrawn__c -
 Stage_Time_Stamp_Negotiation_Review__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration No Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Awarded_Preliminary__c</fullName>
        <label>Stage Time Stamp Awarded (Preliminary)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Awarded__c</fullName>
        <label>Stage Time Stamp Awarded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Closed_Won__c</fullName>
        <label>Stage Time Stamp Closed Won</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Closed__c</fullName>
        <description>For report purposes do not delete</description>
        <label>Stage Time Stamp Closed Lost</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Dev_Prop_Presentation__c</fullName>
        <label>Stage Time Stamp Dev. Prop/Presentation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_In_Progress__c</fullName>
        <description>For report purposes do not delete</description>
        <label>Stage Time Stamp Pre-tender</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Inventorization__c</fullName>
        <label>Stage Time Stamp Inventarisation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Negotiation_Review__c</fullName>
        <description>For report purposes do not delete</description>
        <label>Stage Time Stamp Negotiation/Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Open__c</fullName>
        <description>For report purposes do not delete</description>
        <label>Stage Time Stamp Open</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Pending_Opportunity__c</fullName>
        <label>Stage Time Stamp Pending Opportunity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Proposal_Agreement_Sent__c</fullName>
        <description>For report purposes do not delete</description>
        <label>Stage Time Stamp Proposal/Agreement Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Quotation_Proposal_Sent__c</fullName>
        <description>For report purposes do not delete</description>
        <label>Stage Time Stamp Quotation/Proposal Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Tasting_Trial__c</fullName>
        <label>Stage Time Stamp Tasting / Trial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Tasting__c</fullName>
        <label>Stage Time Stamp Tasting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Time_Stamp_Withdrawn__c</fullName>
        <label>Stage Time Stamp No Bid</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Task ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tea_Amount__c</fullName>
        <label>Tea Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family_text__c</field>
            <operation>equals</operation>
            <value>SAP_02</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_From_Lead_to_Order__c</fullName>
        <label>Time From Lead to Order</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Partner_Contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tool_1__c</fullName>
        <label>Tool 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tool_2__c</fullName>
        <label>Tool 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tool_3__c</fullName>
        <label>Tool 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Stage_Duration__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &quot;Closed Won&quot;) || ISPICKVAL(StageName, &quot;Closed Lost&quot;), (Stage_Time_Stamp_Closed__c - Stage_Time_Stamp_Open__c)*24, (NOW() - Stage_Time_Stamp_Open__c)*24)</formula>
        <label>Total Stage Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touchpoint_Type__c</fullName>
        <label>Touchpoint Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_TouchpointType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Contract__c</fullName>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Free On Loan</fullName>
                </value>
                <value>
                    <fullName>RentBuy</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vending_Machine_Test_Type_1__c</fullName>
        <label>Vending Machine Test Type 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vending_Machine_Test_Type_2__c</fullName>
        <label>Vending Machine Test Type 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Winner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Winner)</relationshipLabel>
        <relationshipName>Opportunities_Winner</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Open_Opportunities_Proposal_sent</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Segment__c</columns>
        <columns>Account_Lifecycle__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Account_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Proposal / Agreement Sent,Negotiation/Review,Tasting / Trial,Awarded (preliminary)</value>
        </filters>
        <label>All Open Opportunities - Proposal sent</label>
        <sharedTo>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Overdue_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Segment__c</columns>
        <columns>Account_Lifecycle__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Account_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,No Bid</value>
        </filters>
        <label>All Overdue Opportunities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Partner_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.PRF_Partner_Opportunity</value>
        </filters>
        <label>All Partner Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Standard_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Standard_Opportunity</value>
        </filters>
        <label>All Standard Opportunities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Tender_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Estimated_Annual_NOS_Turnover__c</columns>
        <columns>Estimated_Number_of_Drinks_per_year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Tender_Opportunity</value>
        </filters>
        <label>All Tender Opportunities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,No Bid</value>
        </filters>
        <label>My Open Opportunities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>JDE_Professional_0</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>